Removal of shared parent pom + final implementation of listng-course and partial implementation of listng-user + cleanup