@@ -5,28 +5,31 @@ import sk.fmfi.listng.domain.administration.Group;
 import sk.fmfi.listng.infrastructure.common.dto.MultiLangTextDto;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class GroupAssembler {
 
     public static GroupDto toDto(Group group) {
         GroupDto dto = new GroupDto();
         dto.id = group.getId();
-        dto.name = MultiLangTextDto.toDto(group.getName());
+        dto.name = new MultiLangTextDto(group.getName());
         dto.courseId = group.getCourseId();
-        dto.classes = ClassAssembler.toDto(group.getClasses().stream().toList());
+        dto.classes = ClassAssembler.toDto(group.getClasses()
+                .stream()
+                .collect(Collectors.toList()));
         return dto;
     }
 
     public static List<GroupDto> toDto(List<Group> groups) {
         return groups.stream()
                 .map(GroupAssembler::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
     
     public static List<Group> fromDto(List<GroupDto> dtos) {
         return dtos.stream()
                 .map(GroupAssembler::fromDto)
-                .toList();
+                .collect(Collectors.toList());
     }
     
     public static Group fromDto(GroupDto dto) {
