@@ -1,20 +1,22 @@
 package sk.fmfi.listng.course.application.controller;
 
-import javassist.NotFoundException;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import sk.fmfi.listng.course.api.RoomApi;
 import sk.fmfi.listng.course.application.assembler.RoomAssembler;
 import sk.fmfi.listng.course.application.repository.RoomRepository;
 import sk.fmfi.listng.course.dto.RoomDto;
 import sk.fmfi.listng.domain.administration.Room;
-import sk.fmfi.listng.infrastructure.common.BaseController;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
-public class RoomController extends BaseController implements RoomApi {
+@RequestMapping("/room")
+public class RoomController implements RoomApi {
 
     @Autowired
     private RoomRepository repository;
@@ -29,31 +31,31 @@ public class RoomController extends BaseController implements RoomApi {
     public List<RoomDto> getAll() {
         return repository.findAll().stream()
                 .map(RoomAssembler::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public RoomDto getById(long id) throws NotFoundException {
+    public RoomDto getById(long id) {
         Optional<Room> room = repository.findById(id);
         
         if (room.isEmpty()) {
-            throw new NotFoundException("error.not.found");
+            throw new EntityNotFoundException("error.not.found");
         }
         return RoomAssembler.toDto(room.get());
     }
 
     @Override
-    public void update(RoomDto room) throws NotFoundException {
+    public void update(RoomDto room) {
         if (!repository.existsById(room.id)) {
-            throw new NotFoundException("error.not.found");
+            throw new EntityNotFoundException("error.not.found");
         }
         repository.save(RoomAssembler.fromDto(room));
     }
 
     @Override
-    public void deleteById(long id) throws NotFoundException {
+    public void deleteById(long id) {
         if (!repository.existsById(id)) {
-            throw new NotFoundException("error.not.found");
+            throw new EntityNotFoundException("error.not.found");
         }
         repository.deleteById(id);
     }
